# llm

./: Airline_AI_Assistant.ipynb  Airline_assistant_with_voice_image.ipynb  Audio_To_Text_Summarization.ipynb  Choose_Models_Benchmark.ipynb  Conversation_between_two_Chatbots.ipynb  Getting_Dataset_for_FineTuning.ipynb  Gradio.ipynb  Inference.ipynb  LoRA_and_QLoRA.ipynb  Predicting_price_with_frontier_models.ipynb  Predicting_prices_with_models.ipynb  README.md  Summarize_website.ipynb  Training_Open_Source_Model.ipynb  Uploading_dataset_to_HuggingFace.ipynb  brochure.ipynb  code_generation_inference.ipynb  convert_code.ipynb  huggingface_pipeline.ipynb  models_QA.ipynb  tokenizers.ipynb
Updated_LLM_Course/: pyproject.toml
Updated_LLM_Course/Week1/Day1/: 1_simple_openai.py  2_fetch_contents.py  3_user_and_system_prompts.py  4_1_website_summarizer_openai.py  4_2_website_sumarizer_ollama.py  4_3_website_summarizer_ollama_playwright.py  README.md  day1.ipynb  scraper.py  telus_newsroom.md  telus_yahoo.md
Updated_LLM_Course/Week1/Day2/: 1_chat_completions_api.py  2_openai.py  3_1_openai_compatible_end_points_gemini.py  3_2_gemini.py  3_3_openai_endpoint_ollama.py  3_4_openai_endpoint_ollama_deepseek.py  README.md  day2.ipynb
